k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkscope-ingress
  namespace: linkscope
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /shorten
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8000
          - path: /r
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8000
          - path: /stats
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8000
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8000
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8000
